--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cinesearch",
   "version": "0.1.0",
-  "proxy": "https://cinesearchback.onrender.com/",
+  "proxy": "https://cinesearchback.onrender.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
